<!--
  ~     Copyright (C) 2017 Basile Maret
  ~
  ~     This file is part of Mobility Rate Calculator.
  ~
  ~     Mobility Rate Calculator is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Mobility Rate Calculator is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Mobility Rate Calculator.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Mobility Rate Calculator</string>

    <string name="from">From</string>
    <string name="to">To</string>
    <string name="kilometers">Kilometers</string>
    <string name="category">Category</string>
    <string name="total">Total</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="prices">Prices</string>


    <string name="set_itinerary">Get from Itinerary</string>
    <string name="find_itinerary">Find itinerary</string>
    <string name="calculate_distance">Calculate distance</string>
    <string name="itinerary">Itinerary</string>
    <string name="calculating">Calculating</string>
    <string name="two_way">Two-way</string>

    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="one_way">One way</string>

    <string name="connexion_error">Connection error</string>
    <string name="no_result_found">No result found</string>
    <string name="invalid_request">Invalid request</string>


    <string name="kilometers_count">%d kilometers</string>
    <string name="chf" translatable="false">%s CHF</string>
    <string name="from_format">From : %s</string>
    <string name="to_format">To : %s</string>
    <string name="distance_format">Total distance : %d km</string>
    <string name="hours_during_the_day">Hours during the day</string>
    <string name="hours_during_the_night">Hours during the night</string>


    <string name="budget" translatable="false">Budget</string>
    <string name="micro" translatable="false">Micro</string>
    <string name="economy" translatable="false">Economy</string>
    <string name="electro" translatable="false">Electro</string>
    <string name="combi" translatable="false">Combi</string>
    <string name="cabrio" translatable="false">Cabrio</string>
    <string name="emotion" translatable="false">Emotion</string>
    <string name="minivan" translatable="false">Minivan</string>
    <string name="transport" translatable="false">Transport</string>
    <string name="to_time">To</string>

    <string name="wrong_format">Wrong format</string>

    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="set_as">Set as</string>
    <string name="set_as_origin">Set as origin</string>
    <string name="set_as_destination">Set as destination</string>
    <string name="address_not_found">Address not found</string>
    <string name="error">Error calculating the distance</string>

    <string name="distance_km">Distance: %d Km</string>
    <string name="no_route_found">No route found</string>
    <string name="origin_and_destination_cannot_be_emtpy">Origin and destination cannot be empty</string>
    <string name="trip">Journey</string>
    <string name="time_h_m_format">{0,choice,0#|1#1 hour\u0020|1&lt;{0} hours\u0020}{1,choice,0#|1&lt;{1} minutes}</string>
    <string name="planned_mileage">Planned mileage</string>
    <string name="time_required">Time required</string>

</resources>
