<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright (C) 2016 Basile
  ~
  ~     This file is part of Mobility Rate Calculator.
  ~
  ~     Mobility Rate Calculator is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Mobility Rate Calculator is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Mobility Rate Calculator.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_prices"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.pec0ra.mobilityratecalculator.PricesActivity">

    <LinearLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_marginBottom="6dp" />

        <TableLayout
            android:stretchColumns="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:padding="3dp"
                    android:text="@string/hours_during_the_day"
                    android:id="@+id/textView5" />

                <TextView
                    android:padding="3dp"
                    android:id="@+id/day_hours_count"
                    android:gravity="end" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:padding="3dp"
                    android:text="@string/hours_during_the_night"
                    android:id="@+id/textView7" />

                <TextView
                    android:padding="3dp"
                    android:id="@+id/night_hours_count"
                    android:gravity="end" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:padding="3dp"
                    android:text="@string/total"
                    android:id="@+id/textView9" />

                <TextView
                    android:padding="3dp"
                    android:id="@+id/total_hours_count"
                    android:gravity="end" />
            </TableRow>
        </TableLayout>

        <TextView
            android:text="@string/distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/distance_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_marginBottom="6dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/kilometers_text"
            android:layout_marginBottom="16dp" />

        <TextView
            android:text="@string/prices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:id="@+id/prices_title" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/prices_container">
        </LinearLayout>

    </LinearLayout>

</ScrollView>
