<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright (C) 2016 Basile
  ~
  ~     This file is part of Mobility Rate Calculator.
  ~
  ~     Mobility Rate Calculator is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Foobar is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/itinerary_from"
        android:hint="@string/from"
        android:inputType="textCapSentences" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/itinerary_to"
        android:hint="@string/to"
        android:inputType="textCapSentences" />

    <CheckBox
        android:text="@string/two_way"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/two_way_checkbox"
        android:checked="true" />
</LinearLayout>