<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:stretchColumns="*"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        style="@style/caption_style"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/category_caption">

        <TextView
            android:padding="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/category_name"
            style="?android:attr/textAppearanceMedium" />
    </TableRow>

    <TableRow
        style="@style/caption_style"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:padding="6dp"
            android:text="@string/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" />

        <TextView
            android:padding="6dp"
            android:text="@string/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" />

        <TextView
            android:padding="6dp"
            android:text="@string/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" />
    </TableRow>

    <TableRow
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:padding="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time_price"
            android:textAlignment="viewStart" />

        <TextView
            android:padding="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/distance_price"
            android:textAlignment="viewStart" />

        <TextView
            android:padding="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total_price"
            android:textAlignment="viewStart"
            android:textColor="?android:attr/textColorPrimary" />
    </TableRow>

</TableLayout>