<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright (C) 2017 Basile Maret
  ~
  ~     This file is part of Mobility Rate Calculator.
  ~
  ~     Mobility Rate Calculator is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Mobility Rate Calculator is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Mobility Rate Calculator.  If not, see <http://www.gnu.org/licenses/>.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ch.pec0ra.mobilityratecalculator.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_marginTop="@dimen/content_padding"
            android:layout_marginStart="@dimen/card_padding"
            android:layout_marginEnd="@dimen/card_padding"
            android:layout_marginBottom="4dp"
            app:contentPadding="@dimen/content_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/card_title_padding"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/time_required" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size"
                            android:text="@string/from" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/from_field"
                            style="@style/Widget.AppCompat.EditText"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:clickable="true"/>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size"
                            android:text="@string/to_time" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/to_field"
                            style="@style/Widget.AppCompat.EditText"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:clickable="true"/>


                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="4dp"
            android:layout_marginStart="@dimen/card_padding"
            android:layout_marginEnd="@dimen/card_padding"
            android:layout_marginBottom="@dimen/content_padding"
            app:contentPadding="@dimen/content_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/card_title_padding"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/planned_mileage" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/kilometers_input"
                        android:text="10"
                        android:textAlignment="viewEnd"
                        android:layout_weight="1"
                        android:gravity="end" />

                    <Button
                        android:text="@string/set_itinerary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/itinerary_button"
                        android:layout_weight="0.5"
                        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored" />
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

</FrameLayout>