<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright (C) 2017 Basile Maret
  ~
  ~     This file is part of Mobility Rate Calculator.
  ~
  ~     Mobility Rate Calculator is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Mobility Rate Calculator is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with Mobility Rate Calculator.  If not, see <http://www.gnu.org/licenses/>.
  -->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true"
    tools:context="ch.pec0ra.mobilityratecalculator.ItineraryActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/itinerary_from"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/from" />

            <EditText
                android:id="@+id/itinerary_to"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itinerary_from"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:ems="10"
                android:hint="@string/to"
                android:inputType="textCapSentences" />

            <CheckBox
                android:id="@+id/two_way_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/submit_button"
                android:layout_alignBottom="@+id/submit_button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:checked="true"
                android:text="@string/two_way" />

            <Button
                android:id="@+id/submit_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/itinerary_to"
                android:text="@string/calculate_distance" />

        </RelativeLayout>

        <FrameLayout
            xmlns:map="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.gms.maps.MapView
                map:cameraZoom="6.6"
                map:cameraTargetLat="46.885"
                map:cameraTargetLng="8.265"
                android:id="@+id/map_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.cardview.widget.CardView
                android:id="@+id/distance_result_card"
                android:visibility="invisible"
                android:layout_margin="3dp"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/distance_result_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="6dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>

        </FrameLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:visibility="invisible"
        android:id="@+id/fab"
        app:fabSize="normal"
        android:src="@drawable/ic_check_24dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/content_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

